--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "RaterFox",
+    "name": "Sandbox Dashboard",
     "description": "",
     "version":"1",
     "author": "Kim",
